--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
   * {
     padding: 0;
     margin: 0;
+    font-family: monospace;
+    font-size: 16px;
+    font-weight: normal;
   }
 
   body > * {
