--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
   .tab-content {
     visibility: hidden;
     position: absolute;
-    top: 2.5em;
+    top: 2.8em;
     left: 0;
     right: 0;
-    padding: 50px;
-    /* border: 1px solid #666; */
+    padding: 1em;
     background-color: #dee;
-    box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.3);
+    border-radius: 0 10px 10px 10px;
+    overflow: hidden;
   }
 
   .tab-top {
     display: block;
     padding: 10px;
     margin-right: 2px;
-    margin-top: 2px;
+    margin-top: 5px;
     border-radius: 10px 10px 0 0;
     color: #eee;
     background-color: #aaa;
@@ -104,6 +104,29 @@
   }
   .tab-selector:checked ~ .tab-top {
     background-color: #888;
+  }
+  .root {
+    fill: white;
+  }
+  .domain {
+    fill: yellow;
+  }
+  .data-class {
+    fill: blue;
+  }
+  .critical-data-entity {
+    fill: green;
+  }
+  .tooltip {
+    background-color: red;
+    padding: 1em;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .tooltip.hide {
+    display: none;
   }
 </style>
 
