Add terser plugin

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
   </main>
 </body>
-<script src="docs/bundle.js"></script>
+<script src="docs/bundle.min.js"></script>
 <style>
   * {
     padding: 0;
